<package>
  <name>cpp_utils</name>
  <version>0.0.0</version>
  <description>The cpp_utils package</description>
  <author email="xuning@cmu.com">Xuning Yang</author>
  <maintainer email="xuning@cmu.com">Xuning Yang</maintainer>
  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
